--- a/views/signup.pug
+++ b/views/signup.pug
@@ -19,4 +19,4 @@ block content
           input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
 
         .form__group
-          button.btn.btn--green create Account 
+          button.btn.btn--green.btn-signup create Account 
